fix nav button alignment

--- a/src/assets/less/default/core/nav.less
+++ b/src/assets/less/default/core/nav.less
@@ -24,7 +24,7 @@
       opacity: 0;
     }
     .bar-3 {
-      transform: rotateZ(-45deg) translate(4px, -4px);
+      transform: rotateZ(-45deg) translate(4px, -5px);
     }
   }
   .navbar-toggle {
